feat: Job Portal Abstraction & LinkedIn Email Ingestion + code quality improvements
##Job Portal Abstraction & LinkedIn Email Ingestion

Backend (6.1-6.3):
- Flyway V6: job, job_status_history, workflow_execution tables with indexes
- JobStatus enum with 14 statuses and complete valid transition state machine
- JobPortal + JobSourceAdapter pluggable interfaces for multi-portal architecture
- LinkedInPortalAdapter + LinkedInEmailIngestionAdapter (IMAP/Jsoup)
- EmailListener: IMAP connection with SSL trust, lookback-days filter, pre-fetch
  content while connection is open (FetchedEmail record pattern)
- EmailParser: LinkedIn Job Alert HTML parsing with multiple selector strategies,
  URL cleaning (tracking params, trailing slashes)
- JobIngestionService with @Async background processing
- JobService, JobStatusService with transition validation and history recording
- JobController: GET /api/v1/jobs (paginated, filterable), GET /api/v1/jobs/{id},
  PUT /api/v1/jobs/{id}/status, POST /api/v1/jobs/ingest (async)
- EmailIngestionConfig: enabled, folder, maxEmailsPerRun, lookbackDays, sender
- AsyncConfig: @EnableAsync for Spring-managed thread pool
- Jsoup 1.18.3 dependency added

Frontend (6.4):
- Jobs list page: MUI Table with 8 columns (title, company, location, status,
  source, posted, ingested, last updated), status filter dropdown, pagination
  (10/20/50), Trigger Ingestion button with async Snackbar feedback
- Job detail page: header card, metadata chips, description, skills, requirements,
  source info with external link
- React Query hooks: useJobs, useJob, useIngestJobs
- TypeScript interfaces: JobResponse, JobListResponse, IngestionResult

Tests (6.5-6.6 — 32 new tests, 121 total):
- JobStatusTransitionPropertyTest: 5 jqwik properties (Property 13)
- PaginationPropertyTest: 6 jqwik properties (Property 15)
- EmailParserTest: 10 unit tests for HTML parsing
- LinkedInEmailIngestionAdapterTest: 11 unit tests for ingestion behavior

## AGENTS.md Rules Update

Bac