@@ -7,7 +7,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,14 +15,21 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${cors.allowed-origins:http://localhost:3000}")
-    private String allowedOrigins;
+    private final String allowedOrigins;
+    private final String allowedMethods;
+    private final String allowedHeaders;
 
-    @Value("${cors.allowed-methods:GET,POST,PUT,DELETE,PATCH,OPTIONS}")
-    private String allowedMethods;
-
-    @Value("${cors.allowed-headers:Authorization,Content-Type,X-Correlation-ID}")
-    private String allowedHeaders;
+    /**
+     * Explicit constructor for @Value parameter injection (Rule 10).
+     */
+    public CorsConfig(
+            @Value("${cors.allowed-origins:http://localhost:3000}") String allowedOrigins,
+            @Value("${cors.allowed-methods:GET,POST,PUT,DELETE,PATCH,OPTIONS}") String allowedMethods,
+            @Value("${cors.allowed-headers:Authorization,Content-Type,X-Correlation-ID}") String allowedHeaders) {
+        this.allowedOrigins = allowedOrigins;
+        this.allowedMethods = allowedMethods;
+        this.allowedHeaders = allowedHeaders;
+    }
 
     /**
      * Creates the CORS configuration source with allowed origins, methods, and headers.
@@ -31,9 +37,9 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        configuration.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
-        configuration.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+        configuration.setAllowedOrigins(List.of(allowedOrigins.split(",")));
+        configuration.setAllowedMethods(List.of(allowedMethods.split(",")));
+        configuration.setAllowedHeaders(List.of(allowedHeaders.split(",")));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
         configuration.setExposedHeaders(List.of("X-Correlation-ID"));
